--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,53 +29,11 @@ dist.jar=${dist.dir}/merutensils.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.affinity-3.0.5.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/affinity-3.0.5.jar
-file.reference.annotations-12.0.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/annotations-12.0.jar
-file.reference.chronicle-algorithms-1.1.8.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/chronicle-algorithms-1.1.8.jar
-file.reference.chronicle-bytes-1.7.34.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/chronicle-bytes-1.7.34.jar
-file.reference.chronicle-core-1.7.15.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/chronicle-core-1.7.15.jar
-file.reference.chronicle-threads-1.7.7.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/chronicle-threads-1.7.7.jar
-file.reference.chronicle-values-1.5.5.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/chronicle-values-1.5.5.jar
-file.reference.chronicle-wire-1.7.30.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/chronicle-wire-1.7.30.jar
-file.reference.javapoet-1.5.1.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/javapoet-1.5.1.jar
-file.reference.jcl-over-slf4j-1.6.6.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/jcl-over-slf4j-1.6.6.jar
-file.reference.jettison-1.3.7.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/jettison-1.3.7.jar
-file.reference.jna-4.2.1.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/jna-4.2.1.jar
-file.reference.jna-platform-4.2.1.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/jna-platform-4.2.1.jar
-file.reference.pax-url-aether-2.4.5.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/pax-url-aether-2.4.5.jar
-file.reference.slf4j-api-1.7.14.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/slf4j-api-1.7.14.jar
-file.reference.stax-api-1.0.1.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/stax-api-1.0.1.jar
-file.reference.tools-1.6.0_38.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/tools-1.6.0_38.jar
-file.reference.xmlpull-1.1.3.1.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/xmlpull-1.1.3.1.jar
-file.reference.xpp3_min-1.1.4c.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/xpp3_min-1.1.4c.jar
-file.reference.xstream-1.4.9.jar=/home/rad/NetBeansProjects/other_libs/chronicle-map-with-deps/xstream-1.4.9.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
-javac.classpath=\
-    ${libs.MapDB_3.0.3.classpath}:\
-    ${file.reference.affinity-3.0.5.jar}:\
-    ${file.reference.annotations-12.0.jar}:\
-    ${file.reference.chronicle-algorithms-1.1.8.jar}:\
-    ${file.reference.chronicle-bytes-1.7.34.jar}:\
-    ${file.reference.chronicle-core-1.7.15.jar}:\
-    ${file.reference.chronicle-threads-1.7.7.jar}:\
-    ${file.reference.chronicle-values-1.5.5.jar}:\
-    ${file.reference.chronicle-wire-1.7.30.jar}:\
-    ${file.reference.javapoet-1.5.1.jar}:\
-    ${file.reference.jcl-over-slf4j-1.6.6.jar}:\
-    ${file.reference.jettison-1.3.7.jar}:\
-    ${file.reference.jna-4.2.1.jar}:\
-    ${file.reference.jna-platform-4.2.1.jar}:\
-    ${file.reference.pax-url-aether-2.4.5.jar}:\
-    ${file.reference.slf4j-api-1.7.14.jar}:\
-    ${file.reference.stax-api-1.0.1.jar}:\
-    ${file.reference.tools-1.6.0_38.jar}:\
-    ${file.reference.xmlpull-1.1.3.1.jar}:\
-    ${file.reference.xpp3_min-1.1.4c.jar}:\
-    ${file.reference.xstream-1.4.9.jar}:\
-    ${libs.Chronicle_Map_3.13.0.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
