added previously missed NetBeans config files, added profiler subdir to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@ out_split
 out_split2
 /tmp.out.fa
 out_split3/
-nbproject/private/profiler/configurations.xml nbproject/private/profiler/settings.xml nbproject/private/profiler/snapshot-1435646708841.nps nbproject/private/profiler/snapshot-1435819523632.nps nbproject/private/profiler/snapshot-1435890495117.nps nbproject/private/profiler/snapshot-1468981746327.nps nbproject/private/profiler/snapshot-1470374100630.nps nbproject/private/profiler/snapshot-1490581962844.nps nbproject/private/profiler/snapshot-1490590043340.nps nbproject/private/profiler/snapshot-1490595078878.nps
+nbproject/private/profiler/*
