--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ language:
 
 jdk:
   - oraclejdk8
-  # - openjdk8
-  # - oraclejdk9
-  # - openjdk10
-  # - openjdk11
-  # - oraclejdk11
+  - openjdk8
+  - oraclejdk9
+  - openjdk10
+  - openjdk11
+  - oraclejdk11
 
 script:
-  - ant clean
+  # - ant clean
   - ant compile
   - ant jar
   - ant run
