--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         java: [8, 11, 13, 16]
-        distribution: ['temourin', 'zulu']
+        distribution: ['temurin', 'zulu']
         
     steps:
       - uses: actions/checkout@v2
