--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [8, 11, 13, 16]
+        java: [8, 11]
         distribution: ['temurin', 'zulu']
         
     steps:
