--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -18,7 +18,7 @@ jobs:
           distribution: ${{ matrix.distribution }}
           java-version: ${{ matrix.java }}
       - name: Compile with Ant
-        run: ant compile 
+        run: ant -Dplatforms.JDK_${{ matrix.java }}.home=$(readlink -f $(which java) | sed 's@/jre/bin/java@@') compile
       - name: Build with Ant
         run: ant jar
       - name: Run with Ant
